--- a/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
@@ -54,7 +54,7 @@
         </mat-form-field>
         <mat-form-field class="form-group">
             <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" class="form-control" formControlName="password">
+            <input matInput placeholder="Password" type="password" class="form-control" formControlName="password">
         </mat-form-field>
         <mat-form-field class="form-group">
             <mat-label>First Name</mat-label>
