--- a/CRM-Update-Final-Project-FE/src/app/pages/components/profile/profile.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/profile/profile.component.html
@@ -8,12 +8,15 @@
             <div class="col-md-12">
                 <ul class="nav nav-pills flex-column flex-md-row mb-3">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/profile">
+                        <a class="nav-link active">
                             <em class="bx bx-user me-1"></em> Account</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/profile/change-password">
-                            <em class="bx bx-bell me-1"></em> Change Password</a>
+                        <a class="nav-link" href="/profile/change-password" >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
+                                <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
+                            </svg> Change Password</a>
                     </li>
                 </ul>
                 <div class="card mb-4">
@@ -158,6 +161,55 @@
                                 </div>
                             </div>
                         </form>
+                    </div>
+                    <!-- /Account -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-xxl flex-grow-1 container-p-y" *ngIf="page=='/profile/change-password'">
+        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Account Settings /</span> Change Password</h4>
+
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="nav nav-pills flex-column flex-md-row mb-3">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/profile" >
+                            <em class="bx bx-user me-1"></em> Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
+                                <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
+                            </svg> Change Password</a>
+                    </li>
+                </ul>
+                <div class="card mb-4">
+                    <h5 class="card-header">Please insert your current and new password</h5>
+                    <hr class="my-0"/>
+                    <div class="card-body">
+                        <form [formGroup]="form">
+                                <mat-form-field class="form-group">
+                                    <mat-label>Password</mat-label>
+                                    <input matInput placeholder="Your password" class="form-control"
+                                            formControlName="oldPassword">
+                                </mat-form-field>
+                                <mat-form-field class="form-group">
+                                    <mat-label>New Password</mat-label>
+                                    <input matInput placeholder="Your new password" class="form-control"
+                                            formControlName="newPassword">
+                                </mat-form-field>
+                                <mat-form-field class="form-group">
+                                    <mat-label>Confirm New Password</mat-label>
+                                    <input matInput placeholder="Repeat your new password" class="form-control"
+                                            formControlName="newPasswordConfirmed">
+                                </mat-form-field>
+                        </form>
+                        <button type="button" class="btn btn-primary me-2 mb-4" (click)="changePassword()">
+                            <em class="bx bx-reset d-block d-sm-none"></em>
+                            <span class="d-none d-sm-block">Change</span>
+                        </button>
                     </div>
                     <!-- /Account -->
                 </div>
