--- a/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.html
@@ -84,13 +84,13 @@
                             <mat-label>Search..?</mat-label>
                             <input matInput placeholder="By keyword" (keyup)="filterByKeyword($event)">
                         </mat-form-field>
-                        <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
+                        <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8" aria-describedby="">
                             <ng-container matColumnDef="symbol">
                                 <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">Symbol</th>
                                 <td mat-cell *matCellDef="let element">
                                     <img *ngIf="element.symbol == null" src="/assets/img/project-symbols/default3.png"
-                                         width="50" height="50">
-                                    <img *ngIf="element.symbol != null" [src]="'/assets/img/project-symbols/'+element.symbol+'.png'" width="50" height="50">
+                                         width="50" height="50" alt="">
+                                    <img *ngIf="element.symbol != null" [src]="'/assets/img/project-symbols/'+element.symbol+'.png'" width="50" height="50" alt="">
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="name">
@@ -114,6 +114,7 @@
                                     <button mat-raised-button color="primary" (click)="updateProject(element)">
                                         Update
                                     </button>
+                                    |
                                     <button mat-raised-button color="warn" (click)="deleteProject(element.id)">Delete
                                     </button>
                                 </td>
