--- a/CRM-Update-Final-Project-FE/src/app/pages/components/staff/staff.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/staff/staff.component.html
@@ -93,10 +93,10 @@
                                 <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">Avatar</th>
                                 <td mat-cell *matCellDef="let element">
                                     <img *ngIf="element.avatar == null && element.gender == 'MALE'"
-                                         src="/assets/img/avatars/male-default.png" width="50" height="50">
+                                         src="/assets/img/avatars/male-default.png" width="50" height="50" alt="">
                                     <img *ngIf="element.avatar == null && element.gender == 'FEMALE'"
-                                         src="/assets/img/avatars/female-default.png" width="50" height="50">
-                                    <img *ngIf="element.avatar != null" [src]="element.symbol" width="50" height="50">
+                                         src="/assets/img/avatars/female-default.png" width="50" height="50" alt="">
+                                    <img *ngIf="element.avatar != null" [src]="element.avatar" width="50" height="50" alt="">
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="firstName">
